Ensured link text contrasts sufficiently with background

--- a/ui/public/styles/reset.css
+++ b/ui/public/styles/reset.css
@@ -152,4 +152,5 @@ p {
 
 a {
   cursor: pointer;
+  color: inherit;
 }
